# RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  contexte.txt  fiche_auto_evaluation.txt  pyproject.toml
data/faiss_index/: events_metadata.json
src/: __init__.py
src/api/: __init__.py  main.py
src/data_processing/: __init__.py  clean_data.py  fetch_events.py
src/rag/: __init__.py  rag_chain.py
src/vectorization/: __init__.py  build_index.py  embeddings.py
tests/: __init__.py  demo_api.py  demo_data_processing.py  demo_rag_chain.py  demo_vectorization.py  evaluate_rag.py  evaluation_dataset.json  evaluation_results.json  test_api.py  test_data_processing.py  test_environment.py  test_rag_chain.py  test_rag_integration.py  test_vectorization.py
