[project]
name = "rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "numpy<2.0",
  "faiss-cpu==1.7.4",
  "langchain",
  "langchain-community",
  "langchain-huggingface",
  "sentence-transformers>=3.0.0",
  "huggingface-hub<1.0",
  "mistralai==1.12.4",
  "requests",
  "fastapi==0.104.1",
  "uvicorn==0.24.0",
  "python-dotenv",
  "python-multipart==0.0.6",
  "ragas==0.4.3",
]

[dependency-groups]
dev = [
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"